crates/eure-macros/tests/compile_fail/via_missing_into_eure_impl_tuple_variant.rs
use eure::IntoEure;

struct JumpAt;
struct JumpAtProxy;

#[derive(IntoEure)]
enum Cmd {
    Jump(usize, #[eure(via = "JumpAtProxy")] JumpAt),
}

fn main() {}
